<resources>
    <string name="app_name">Devera</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Groups</string>
    <string name="title_notifications">Notifications</string>
    <string name="userName">Username or email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="don_t_have_account_sign_up">Don\'t have account ? Sign Up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="devera">DevEra</string>
    <string name="Full_Name">Full Name</string>
    <string name="reguserName">User Name</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Email">Email </string>
    <string name="choose_your_photo">Choose Your Photo</string>
    <string name="select_photo">Select photo</string>
    <string name="Name">Name</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="please_type_comment">Please type a comment...</string>
    <string name="no_posts">No posts</string>
    <string name="what_s_on_your_mind">What\'s on your mind ?</string>
</resources>